# codex-remote

./: .gitignore  README.md  SECURITY.md  pubspec.yaml
.githooks/: pre-commit
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: codex_remote_app.dart  field_exec_app.dart
lib/background/: codex_remote_workmanager.dart  field_exec_workmanager.dart
lib/codex/: codex_command.dart  codex_events.dart  codex_output_schema.dart
lib/rinf/: rust_ssh_service.dart
lib/services/: active_session_service.dart  app_lifecycle_service.dart  background_work_service.dart  codex_session_store.dart  desktop_project_window_launcher.dart  field_exec_session_store.dart  field_execd_client.dart  local_shell_service.dart  notification_service.dart  remote_jobs_store.dart  session_scrollback_service.dart  shared_projects_service.dart  ssh_key_service.dart  ssh_lifecycle_service.dart  ssh_service.dart  startup_project_args_service.dart  theme_mode_service.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
native/hub/: Cargo.toml
rust/field_exec_rinf/: Cargo.toml
rust/field_exec_rinf/src/: storage.rs
rust/field_execd/: Cargo.toml
rust/field_execd/src/: main.rs
scripts/: fix-macos-codesign-keychain.sh  install-git-hooks.sh
test/: widget_test.dart
(+19 files in other folders)
