[package]
name = "field_exec_rinf"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
field_exec_api = { path = "../../native/field_exec_api" }
rinf = "8.8.1"
tokio = { version = "1.45.0", features = ["rt", "sync", "time"] }
