[package]
name = "field_execd"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
async-ssh2-tokio = "0.12.1"
rand_core = "0.6.4"
russh = { version = "0.55.0", default-features = false, features = ["flate2", "ring", "rsa"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
ssh-key = { package = "internal-russh-forked-ssh-key", version = "0.6.11", default-features = true }
tokio = { version = "1.45.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

